# abstract-interpreter

./: AbstractInterpreter.hs  abstract-interpreter.cabal
