name:                abstract-interpreter
version:             0.1.0.0
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable abstract-interpreter
  main-is:             AbstractInterpreter.hs
  build-depends:       base >=4.9 && <4.10, containers >=0.5 && <0.6
  default-language:    Haskell2010
